Add story dependency check
